# persimmon

./: CMakeLists.txt  README.MD
demos/: catch.scm  compare-demo.scm  compare.scm  def.scm  dict.scm  error.scm  functional.scm  in.scm  let.scm  lists.scm  logic.scm  main.scm  types.scm  varargs.scm
src/: main.c
src/object/: accessors.c  accessors.h  allocator.c  allocator.h  compare.c  compare.h  constructors.c  constructors.h  dict.c  dict.h  list.c  list.h  object.c  object.h  repr.c  repr.h
src/static/: constants.c
src/utility/: arena.c  arena.h  arena_append.h  arena_sprintf.h  container_of.h  dynamic_array.h  exchange.h  guards.h  macros.h  math.h  option.h  pointers.c  pointers.h  slice.h  string_builder.c  string_builder.h  strings.c  strings.h  writer.c  writer.h
src/vm/: bindings.c  bindings.h  constants.c  constants.h  env.c  env.h  errors.c  errors.h  eval.c  eval.h  primitives.c  primitives.h  stack.c  stack.h  traceback.c  traceback.h  variadic.c  variadic.h  virtual_machine.c  virtual_machine.h
src/vm/reader/: line_reader.c  line_reader.h  named_file.c  named_file.h  parser.c  parser.h  position.h  reader.c  reader.h  scanner.c  scanner.h  syntax_error.c  syntax_error.h
